# ips_cli

./: .gitignore  Cargo.toml  README.md  ips_design_doc.md  reasonix.toml
.claude/: settings.local.json
.github/workflows/: release.yml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/attachments/: clipboard-20260630-000145.074219-000001.json
src/: discovery.rs  lib.rs  main.rs  matcher.rs  types.rs
src/extract/: a1111.rs  comfyui.rs  exif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
src/output/: console.rs  csv.rs  json.rs  mod.rs
tests/: integration_tests.rs
