[package]
name = "ips"
version = "0.1.0"
edition = "2021"
description = "Search AI-generated image prompts embedded in local image metadata"

[[bin]]
name = "ips"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rayon = "1"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
termcolor = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = 3
